[project]
name = "TwitchViewerBOT"
version = "2.3"
description = "Twitch Bot for making fake viewers on your live"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Base dependencies
    "requests[socks]>=2.28.0",
    "streamlink",
    "fake_useragent",
    
    # Flask and related
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-login>=0.6.0",
    "flask-jwt-extended>=4.5.0",
    "werkzeug>=2.0.0",
    "python-dotenv",
    "gunicorn",
    
    # Database
    "SQLAlchemy>=2.0.0",
    "alembic>=1.0.0",
    "psycopg2-binary",
    
    # UI and formatting
    "rich",
    "customtkinter",
    "emoji",
    
    # Security and encryption
    "pycryptodome",
    "cffi",
    "bcrypt",
    "PyJWT",
    
    # Async support
    "aiohttp>=3.8.0",
    "asgiref>=3.7.0",
    
    # ML/AI dependencies
    "torch",
    "numpy",
    "openai",
    
    # Utilities
    "python-decouple",
    "argparse",

    "certbot",
    "cryptography",
    "requests",
    "Werkzeug",
    "gevent"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-flask",
    "pytest-asyncio",
    "pytest-cov",
    "python-decouple",
    "faster_whisper",
    "torch",
    "transformers",
]

dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
]
